--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="Content-Language" content="en"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Josu&eacute; Tonelli-Cueto's Personal Webpage</title>
+    <meta property="og:image" content="https://www.tonellicueto.xyz/logo.png">
     <meta name="description" content="Research, interests and more information about Josué Tonelli-Cueto" />
 
     <!--  Bootstrap core CSS  -->
