--- a/arXiv.html
+++ b/arXiv.html
@@ -94,10 +94,10 @@
 
         <ul class="navbar-nav r-auto">
 	<li class="nav-item active">
-            <a class="nav-link" href="arXiv.html">en</a>
+            <a class="nav-link" href="arxiv.html">en</a>
           </li>
 	<li class="nav-item">
-            <a class="nav-link" href="arXiv_es.html">es</a>
+            <a class="nav-link" href="arxiv_es.html">es</a>
           </li>
         </ul>
       </div>
