--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   <div class="row" align="center" style="font-size:x-large;padding-top:5vw;font-size:2vw;">
     <div class="col">
       <a class="btn btn-secondary" href="aboutme.html" role="button" style="width:80%;">About me</a><br><br>
-      <a class="btn btn-arxiv" href="arxiv.html" role="button" style="width:80%;"><i class="ai ai-arxiv-square"></i> my arXiv</a>
+      <a class="btn btn-arxiv" href="arXiv.html" role="button" style="width:80%;"><i class="ai ai-arxiv-square"></i> my arXiv</a>
     </div>
     <div class="col">
       <a class="btn btn-pikasle"  href="pikasle_en.html" role="button" style="width:80%;">$\pi kasle$</a><br><br>
