--- a/index_es.html
+++ b/index_es.html
@@ -102,7 +102,7 @@
         <div class="row" align="center" style="font-size:x-large;padding-top:5vw;font-size:2vw;">
           <div class="col">
             <a class="btn btn-secondary" href="aboutme_es.html" role="button" style="width:80%;">Sobre mi</a><br><br>
-            <a class="btn btn-arxiv" href="arxiv_es.html" role="button" style="width:80%;"><i class="ai ai-arxiv-square"></i> mi arXiv</a>
+            <a class="btn btn-arxiv" href="arXiv_es.html" role="button" style="width:80%;"><i class="ai ai-arxiv-square"></i> mi arXiv</a>
           </div>
           <div class="col">
             <a class="btn btn-pikasle"  href="pikasle_es.html" role="button" style="width:80%;">$\pi kasle$</a><br><br>
