--- a/research_es.html
+++ b/research_es.html
@@ -137,9 +137,9 @@
 <hr>
 <div id="papers">
   <h2 class="display-4">Artículos cient;ificos y preprints</h2>
-  <p style="margin:0;">The following shows my papers and preprint in the last few years. For a complete list, see <a href="cv.html#publications">the list on my CV</a> or <a href="arxiv.html">my list of arXiv preprints</a>.</p>
+  <p style="margin:0;">The following shows my papers and preprint in the last few years. For a complete list, see <a href="cv.html#publications">the list on my CV</a> or <a href="arXiv.html">my list of arXiv preprints</a>.</p>
   <br><div class="row"><div class="col-md-12">
-  <h3>Preprints <a class="btn btn-arxiv" href="arxiv.html" role="button"><i class="ai ai-arxiv-square"></i> arXiv preprints' list</a></h3>
+  <h3>Preprints <a class="btn btn-arxiv" href="arXiv.html" role="button"><i class="ai ai-arxiv-square"></i> arXiv preprints' list</a></h3>
   </div></div>
 
   <br><div class="cv">
