--- a/arXiv_es.html
+++ b/arXiv_es.html
@@ -94,14 +94,15 @@
 
         <ul class="navbar-nav r-auto">
 	<li class="nav-item">
-            <a class="nav-link" href="arxiv.html">en</a>
+            <a class="nav-link" href="arXiv.html">en</a>
           </li>
 	<li class="nav-item active">
-            <a class="nav-link" href="arxiv_es.html">es</a>
+            <a class="nav-link" href="arXiv_es.html">es</a>
           </li>
         </ul>
       </div>
     </nav>
+
 
     <!--  Main jumbotron for a primary marketing message or call to action  -->
 
