--- a/cv_es.html
+++ b/cv_es.html
@@ -397,7 +397,7 @@
       </div></div>
 
       <br><div class="row"><div class="col-md-12">
-      <h3>Preprints <a class="btn btn-arxiv" href="arxiv.html" Labor="button"><i class="ai ai-arxiv-square"></i> arXiv preprints' list</a></h3>
+      <h3>Preprints <a class="btn btn-arxiv" href="arXiv.html" Labor="button"><i class="ai ai-arxiv-square"></i> arXiv preprints' list</a></h3>
       </div></div>
 
       <br><div class="cv">
