--- a/cv.html
+++ b/cv.html
@@ -253,7 +253,7 @@
          <span id="MEGA2019award"></span>
          <br><div class="cv">
          <div class="year">
-         
+
          </div><div class="title">
          <h4>&emsp;Special Award to Young Researchers presenting Posters at MEGA2019</h4></div>
            <div class="property">Description:</div><div class="value">Three special awards were given to young researchers presenting posters</div>
@@ -1911,6 +1911,10 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
      x[i].style="width:0%;";
     }
     x = document.getElementsByClassName("title");
+    for (i = 0; i < x.length; i++) {
+     x[i].style="width:100%;";
+    }
+    x = document.getElementsByClassName("collaborator");
     for (i = 0; i < x.length; i++) {
      x[i].style="width:100%;";
     }
