--- a/arXiv_es.html
+++ b/arXiv_es.html
@@ -53,7 +53,22 @@
     </style>
 
     <!--  arXiv widget with papers  -->
-    <script type="text/javascript" src="js/arxiv.js"></script>
+    <script type="text/javascript">
+    <!--
+    function loadScript(url) {
+      var head = document.getElementsByTagName("head")[0];
+      var script = document.createElement("script");
+      script.type = "text/javascript";
+      script.src = url;
+      head.appendChild(script);
+    }
+    if (screen.width <= 699) {
+      loadScript("js/arxiv_phone.js");
+    } else {
+      loadScript("js/arxiv.js");
+    }
+    //-->
+    </script>
 </head>
 
   <body>
@@ -141,15 +156,19 @@ Esta lista ha sido producida gracias a mi <a href="https://arxiv.org/a/tonellicu
     <script type="text/javascript">
     <!--
     if (screen.width <= 699) {
-    var x;
-    x = document.getElementsByClassName("btn btn-arxiv");
-    var i;
-    for (i = 0; i < x.length; i++) {
-     x[i].style="width:10em;";
-    }
     document.getElementById("finalsentence").innerHTML="";
     }
     //-->
     </script>
+    <!-- For math expression-->
+    <script type="text/x-mathjax-config">
+      MathJax.Hub.Config({
+       tex2jax: {
+         inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+        processEscapes: true
+        }
+       });
+    </script>
+     <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
   </body>
 </html>
