--- a/non-research_es.html
+++ b/non-research_es.html
@@ -137,6 +137,14 @@
     <script src="js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="js/ie10-viewport-bug-workaround.js"></script>
-    <script type="text/javascript"></script>
+    <!-- For phone -->
+    <script type="text/javascript">
+    <!--
+    if (screen.width <= 699) {
+    document.getElementById("navbarCV").innerHTML="";
+    document.getElementById("finalsentence").innerHTML="";
+    }
+    //-->
+    </script>
   </body>
 </html>
