--- a/index.html
+++ b/index.html
@@ -136,18 +136,18 @@
     x = document.getElementsByTagName("H1");
     var i;
       for (i = 0; i < x.length; i++) {
-       x[i].style="font-size:2em;font-weight:bold;";
+       x[i].style="font-size:2.5em;font-weight:bold;";
       }
     x = document.getElementsByTagName("H2");
       for (i = 0; i < x.length; i++) {
-       x[i].style="font-size:1.5em;font-weight:bold;";
+       x[i].style="font-size:1.8em;font-weight:bold;";
     }
     x = document.getElementsByTagName("H3");
       for (i = 0; i < x.length; i++) {
-       x[i].style="font-size:1em;font-weight:bold;";
+       x[i].style="font-size:0.8em;font-weight:bold;";
     }
     x = document.getElementsByClassName("jumbotron");
-     x[0].style="";
+     x[0].style="margin-bottom: 1em;";
     x = document.getElementsByClassName("row");
      x[1].style="font-size:large;padding-top:5vw;";
     document.getElementById("finalsentence").innerHTML="";
