--- a/index.html
+++ b/index.html
@@ -148,6 +148,8 @@
     }
     x = document.getElementsByClassName("jumbotron");
      x[0].style="margin-bottom: 1em;";
+    x = document.getElementsByClassName("col col-md-5");
+      x[0].style="margin-bottom: 0.5em;";
     x = document.getElementsByClassName("row");
      x[1].style="font-size:large;padding-top:5vw;";
     document.getElementById("finalsentence").innerHTML="";
