--- a/index.html
+++ b/index.html
@@ -144,8 +144,10 @@
     }
     x = document.getElementsByTagName("H3");
       for (i = 0; i < x.length; i++) {
-       x[i].style="font-size:0.8em;font-weight:bold;";
+       x[i].style="font-size:1em;font-weight:bold;";
     }
+    x[0].innerHTML='<a href="https://www.math.tu-berlin.de/fachgebiete_ag_diskalg/fachgebiet_algorithmische_algebra/v_menue/members/josue_tonelli_cueto/">PhD Student at TU Berlin</a>';
+    x[1].innerHTML='<a href="https://www.math-berlin.de/students/phase-ii-students">Phase II Student at Berlin Mathematical School</a>';
     x = document.getElementsByClassName("jumbotron");
      x[0].style="margin-bottom: 1em;";
     x = document.getElementsByClassName("col col-md-5");
