--- a/multimedia.html
+++ b/multimedia.html
@@ -410,9 +410,7 @@
     <script type="text/javascript">
     <!--
     if (screen.width <= 699) {
-    var x;
-    x = document.getElementsByClassName("jumbotron");
-     x[0].style="margin-top:1.3em;";
+    document.getElementById("navbarCV").innerHTML="";
     document.getElementById("finalsentence").innerHTML="";
     }
     //-->
