--- a/aboutme_es.html
+++ b/aboutme_es.html
@@ -130,7 +130,7 @@
     <script type="text/javascript">
     <!--
     if (screen.width <= 699) {
-    document.getElementById("portrait").style="margin-bottom:1em;margin-top:1em;";
+    document.getElementById("portrait").style="float:center;margin-bottom:1em;margin-top:1em;";
     document.getElementById("portrait").width="100%";
     document.getElementById("finalsentence").innerHTML="";
     }
