--- a/aboutme.html
+++ b/aboutme.html
@@ -129,8 +129,7 @@
     <script type="text/javascript">
     <!--
     if (screen.width <= 699) {
-    document.getElementById("portrait").style="float:center;margin-bottom:1em;margin-top:1em;";
-    document.getElementById("portrait").width="100%";
+    document.getElementById("portrait").style="width:100%;float:center;margin-bottom:1em;margin-top:1em;";
     document.getElementById("finalsentence").innerHTML="";
     }
     //-->
