--- a/multimedia.html
+++ b/multimedia.html
@@ -277,7 +277,7 @@
      <img style="width:90%;" src="imgs/bmsstudconf2018_1.jpg" alt="6th BMS Student Conference organizers Héctor Andrade Loarca, Yuya Tokuta, Josué Tonelli-Cueto, Brent Moran and Qiao Luo"/>
      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2018 András Tobiás)</p>
      <p style="margin:0;text-align:center;padding-top:0em;">Berlin, February 2018</p>
-     <p style="text-align:justify;font-size:small;">At the <em>Wine and Cheese</em> of the 6th BMS Student Conference with my fellow organizers and once BMS Student Representatives (left to right) Héctor Andrade Loarca, Yuya Tokuta, Brent Moran and Qiao Luo.</p>
+     <p style="text-align:justify;font-size:small;">At the <em>Wine and Cheese</em> of the 6th BMS Student Conference with my fellow organizers and once BMS Student Representatives (left to right) Héctor Andrade Loarca, Yuya Tokuta, I, Brent Moran and Qiao Luo.</p>
    </div>
 
    <div class="col-md-4" style="padding-top:1em;text-align:center;">
@@ -322,7 +322,7 @@
      <img style="width:90%;" src="imgs/Debate1.jpg" alt="Part of the debating team of the University of the Basque Cpuntry"/>
      <p style="margin:0;text-align:center;font-size:0.5em;">(&copy;2012 María Jesús Cueto Puente)</p>
      <p style="margin:0;text-align:center;padding-top:0em;">Bilbao, November 2012</p>
-     <p style="text-align:justify;font-size:small;">Together with some of the partners of the debating club of the University of the Basque Country, (left to right) Santi González, Ion Baratas, Leire Caballero and me; and my grandmother María Jesús Puente de la Peña (second from the right) after the ceremony of the III .</p>
+     <p style="text-align:justify;font-size:small;">Together with some of the partners of the debating club of the University of the Basque Country, (left to right) Santi González, Ion Baratas, Leire Caballero and me; and my grandmother María Jesús Puente de la Peña (second from the right).</p>
    </div>
 
    <div class="col-md-4" style="padding-top:1em;text-align:center;">
@@ -384,10 +384,11 @@
      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/203591928?color=ee2523&byline=0&portrait=0&title=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
      <p style="text-align:center;"><b style="color:#ee2523;">What is the length of a potato?</b><br>&ldquo;What is...?&rdquo; Seminar, January 2017</p>
    </div>
-   <!--<div class="col-md-6" style="padding-top:1em;">
+   <div class="col-md-3"></div>
+   <div class="col-md-6" style="padding-top:1em;">
       <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/160594229?color=ee2523&byline=0&portrait=0&title=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
       <p style="text-align:center;"><b style="color:#ee2523;">What is an origami constructible number?</b><br>&ldquo;What is...?&rdquo; Seminar, February 2016</p>
-   </div>-->
+   </div>
   </div>
   <br>
   <script src="https://player.vimeo.com/api/player.js"></script>
