--- a/research_es.html
+++ b/research_es.html
@@ -95,9 +95,9 @@
 <div id="areas">
   <h2 class="display-4">Áreas de interés</h2>
   <p>
-    Although I have interests in other areas of mathematics, my main areas of interest on which my work has focused are numerical algorithms and condition-based complexity, computational algebraic geometry, and random geometry.
+    Aunque tengo intereses en otras áreas de las matemáticas, mis principales áreas de interes son los algoritmos numéricos y la complejidad basada en condición, la geometría algebraica aleatoria y la geoemtría aleatoria.
   </p>
-  <h3>Numerical algorithms and condition-based complexity</h3>
+  <h3>Algoritmos numéricos y complejidad basada en condición</h3>
   <p>
     Numerical algorithms are algorithms and as such discrete in nature. They are specified by a finite <em>program</em> and they perform a computation composed by a discrete sequence of logical/arithmetic operations. They differ from classical algorithms because they deal with <em>continuous problems</em> where the input (and output) are described partially by sequences of real (and complex) numbers. With these, numerical algorithms can only work with approximations and not the real number themselves. In other words, numerical algorithms are doomed to run on inexact inputs, must round up the numbers along the way and can only produce approximate answers to the continuous problem (when this answer includes real numbers). Despite all of this, numerical algorithms manage to solve problems both in theory and in practice. Which makes numerical algorithms the oxymoron by which the discrete explores the continuous.
   </p>
@@ -116,16 +116,16 @@
   <p>
     My interest focus on the development and analysis of numerical algorithms for a variety of problems (mainly in algebraic geometry) inside the framework of condition-based complexity. In this, I have a special focus on how to develop and analyze numerical algorithms based on adaptive subdivisions methods and on improving existing complexity analyses by exploring different frameworks such as more realistic measures of the errors and more general distributions.
   </p>
-  <h3>Computational algebraic geometry</h3>
+  <h3>Geometría algebraica computacional</h3>
   <p>
     Algebraic geometry deals broadly with objects that can be defined using polynomials and their properties. With the advent of computers, the possibility of turning certain constructive, but humanly impracticable, methods into working algorithms became real. This possibility was also motivated by the fact that polynomials appear in many practical applications (robotic arms, chemical networks, dynamical systems, etc.), which made that the possibility also became a necessity. This algorithmic possibility is the focus of computational algebraic geometry whose goal is to develop and analyze algorithms that solve problems in algebraic geometry.
   </p>
   <p>
     Among the possible computational challenges, my focus lies in the search for zeros of polynomial equations and the computation of topological invariants of semialgebraic sets, which are sets described by real polynomials, inequalities, and their combination. In the first one, I am interested in understanding better theoretically the practitioners' tricks from a complexity viewpoint in the complex case and the subdivision and grid methods in the real case. In the second one, I try to develop an algorithm that computes the homology of semialgebraic sets in average singly exponential time in opposition to the state of the art algorithms that are either doubly exponential in the worst case or singly exponential with high probability. My long term project is to use computational algebraic geometry to effectively attack the first part of Hilbert's 16th problem in high degrees.
   </p>
-  <h3>Random geometry</h3>
+  <h3>Geometría aleatoria</h3>
   <p>
-    Given a random geometric structure, what can we say about the distributions of its properties? One might wonder about the topological properties of the object. For example, given a random polynomial system, what is the distribution of its number of zeros? Or given a random underdetermined polynomial system, what is the distribution of the Betti numbers of its zero sets? And one might also consider the geometric properties of the object. For example, given a random polynomial system, what is the minimum separation between two or its zeros? Or given a random underdetermined polynomial system, what is the distribution of the reach of its zero sets?
+    Dada una estructura geométrica aleatoria, ¿qué podemos decir acerca de la distribución de sus propiedades? Podemos preguntarnos acerca de las propiedades topológicas del objeto. Por ejemplo, dado un sistema polinomial aleatorio, ¿cuál es la distribución de su numéro de ceros? O, dado un sistema polinomial subdeterminado aleatorio, ¿cuál es la distribución de los números de Betti de su conjunto de ceros? Y podemos considerar también las propiedades geométricas del objeto. Por ejemplo, dado un sistema polinomial aleatorio, ¿cuál es la distribución de la distancia mínima entre dos de sus ceros? O, dado un sistema polinomial subdeterminado aleatorio, ¿cuál es la distribución del alcance (reach) de su conjunto de ceros?
   </p>
   <p>
     The centrality of this question can be appreciated in several aspects. First, in applications, it may help to explain why certain phenomena are more common than others. Second, in constructive algorithms, it may help to explain why a certain method fails to produce examples of a certain sort or why it will successfully produce examples of some desired sort. Third, in real algebraic geometry, random geometry is the only way to understand what happens &ldquo;in general&rdquo; since, in contrast to the complex case, there is no generic behavior in the real world.
@@ -137,7 +137,7 @@
 <hr>
 <div id="papers">
   <h2 class="display-4">Artículos cient;ificos y preprints</h2>
-  <p style="margin:0;">The following shows my papers and preprint in the last few years. For a complete list, see <a href="cv.html#publications">the list on my CV</a> or <a href="arXiv.html">my list of arXiv preprints</a>.</p>
+  <p style="margin:0;">Los siguientes son mi artículos científicos y preprints en los últimos años. Para una lista completa, consultar <a href="cv.html#publications">la lista de mi CV</a> o <a href="arXiv.html">mi lista de preprints de arXiv</a>.</p>
   <br><div class="row"><div class="col-md-12">
   <h3>Preprints <a class="btn btn-arxiv" href="arXiv.html" role="button"><i class="ai ai-arxiv-square"></i> arXiv preprints' list</a></h3>
   </div></div>
