--- a/multimedia_es.html
+++ b/multimedia_es.html
@@ -338,7 +338,7 @@
    </div>
 
    <div class="col-md-4" style="padding-top:1em;text-align:center;">
-     <img style="width:80%;" src="imgs/PortraitMarzo2010.JPG" alt="Josue Tonelli-Cueto at de 2010 with paint on his face"/>
+     <img style="width:80%;" src="imgs/PortraitMarch2010.JPG" alt="Josue Tonelli-Cueto at de 2010 with paint on his face"/>
      <p style="margin:0;text-align:center;padding-top:0.7em;">Bilbao, marzo de 2010</p>
      <p style="text-align:justify;font-size:small;">Después de pintar un lienzo y mi cara.</p>
    </div>
