--- a/cv_es.html
+++ b/cv_es.html
@@ -108,7 +108,7 @@
   </div><div class="col-md-4">
     <a class="btn btn-secondary" href="pdf/UnDetailed_CV_tonellicueto.pdf" Labor="button" style="width:80%;">Versión PDF (sin detalles) [Inglés]</a>
   </div><div class="col-md-4">
-    <a class="btn btn-secondary" href="pdf/Resume_tonellicueto.pdf" Labor="button" style="width:80%;">Résumé de dos páginas (PDF) [Inglés]</a>
+    <a class="btn btn-secondary" href="pdf/Resume_tonellicueto.pdf" Labor="button" style="width:80%;">Versión bipaginal (PDF) [Inglés]</a>
   </div></div>
   <hr>
 <p>
