--- a/cv_es.html
+++ b/cv_es.html
@@ -106,9 +106,9 @@
   <div class="row" style="text-align:center;"><div class="col-md-4">
     <a class="btn btn-secondary" href="pdf/Long_CV_tonellicueto.pdf" Labor="button" style="width:80%;">Versión PDF [Inglés]</a>
   </div><div class="col-md-4">
-    <a class="btn btn-secondary" href="pdf/UnDetailed_CV_tonellicueto.pdf" Labor="button" style="width:80%;">Versión PDF (sin detalles) [Inglés]</a>
+    <a class="btn btn-secondary" href="pdf/UnDetailed_CV_tonellicueto.pdf" Labor="button" style="width:80%;">Versión PDF sin detalles [Inglés]</a>
   </div><div class="col-md-4">
-    <a class="btn btn-secondary" href="pdf/Resume_tonellicueto.pdf" Labor="button" style="width:80%;">Versión bipaginal (PDF) [Inglés]</a>
+    <a class="btn btn-secondary" href="pdf/Resume_tonellicueto.pdf" Labor="button" style="width:80%;">Versión 2 páginas (PDF) [Inglés]</a>
   </div></div>
   <hr>
 <p>
