--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <div class="jumbotron" style="margin-bottom: 0px;">
  <div class="row" style="display: flex;">
   <div class="col-md-5" align="center">
-        <a href="imgs/josue_tonellicueto_index.jpg"><img itemprop="image" src="imgs/josue_tonellicueto_index.png" style="width: 80%;" class="img-responsive center_image" alt="Picture of Josu&eacute; Tonelli-Cueto at the TU Berlin"/></a>
+        <a href="imgs/josue_tonellicueto_index.JPG"><img itemprop="image" src="imgs/josue_tonellicueto_index.png" style="width: 80%;" class="img-responsive center_image" alt="Picture of Josu&eacute; Tonelli-Cueto at the TU Berlin"/></a>
   </div>
   <div class="col-md-7">
         <center>
