--- a/arXiv_es.html
+++ b/arXiv_es.html
@@ -156,6 +156,12 @@ Esta lista ha sido producida gracias a mi <a href="https://arxiv.org/a/tonellicu
     <script type="text/javascript">
     <!--
     if (screen.width <= 699) {
+    var x;
+    x = document.getElementsByClassName("btn btn-arxiv");
+    var i;
+    for (i = 0; i < x.length; i++) {
+     x[i].style="width:10em;";
+    }
     document.getElementById("finalsentence").innerHTML="";
     }
     //-->
