--- a/research_es.html
+++ b/research_es.html
@@ -114,7 +114,7 @@
     Aun más, la complejidad basada en condición nos permite entender cuánta precisión requiere un algoritmo numérico para garantizar un dato de salida conrrecto y cómo este algoritmo se comporta probabilísticamente, si asumimos una distribución de probabilidad razonable en el dato de entrada. En el primer caseo, la precisión necesitada está generalmente controlada por el logaritmo del número de condición. En el segundo caso, el estudio de la distribución del número de condición de un problema en un dato de entrada aleatorio permite obtener estimaciones de complejidad con alta probabilidad (complejidad débil) y en promedio (complejidad promedio).
   </p>
   <p>
-    Mis intereses se centran en el desarrollo y análisis del algoritmos numéricos para una variedad de problemas (mayoritariamente el geometría algebraica numérica) dentro del marco de la complejidad basada en condición. En esta meta, me interesa en particular desarrollar y analizar algoritmos numéricos basados en subdivisión adaptativa y mejorar los análisis de complejidad existentes explorando, por ejemplo, medidas más realistas de los errores y distribuciones más generales.
+    Mis intereses se centran en el desarrollo y análisis del algoritmos numéricos para una variedad de problemas (mayoritariamente el geometría algebraica numérica) dentro del marco de la complejidad basada en condición. En esta meta, me interesa en particular desarrollar y analizar algoritmos numéricos basados en subdivisión adaptativa y mejorar los análisis de complejidad existentes explorando, por ejemplo, medidas alternativas de los errores y distribuciones más generales.
   </p>
   <h3>Geometría algebraica computacional</h3>
   <p>
