--- a/cv.html
+++ b/cv.html
@@ -452,7 +452,7 @@
 </div>
 
    <br><div class="cv">
-   <div class="year"><h4></h4></div><div class="title"><h4>&emsp;<a href="#SIAMAG2019Symposium">Minisymposium <em>Numerical methods for structured polynomial system solving</em></a></h4></div><div class="year"></div><div class="title"><h4>at <a href="#SIAMAG2019">SIAM Conference on Applied Algebraic Geometry 2019</a></h4></div>
+   <div class="year"><h4></h4></div><div class="title"><h4>&emsp;<a href="#SIAMAG2019Symposium">Minisymposium <em>Numerical methods for structured polynomial system solving</em></a></h4></div><div class="year"></div><div class="title"><h4>at <a href="#SIAMAG2019">SIAM Conference on Applied Algebraic Geometry 2019</a><span style="float:right;"><a href="pdf/SIAMAG19_slides.pdf">Slides</a></span></h4></div>
      <div class="pretalktitle"></div><div class="talktitle">Farewell to Weyl: Condition-based analysis with a Banach norm in numerical algebraic geometry</div>
    </div>
 
@@ -480,7 +480,7 @@
    YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
       <br><div class="cv">
-      <div class="year"><h4>2018</h4></div><div class="title"><h4>&emsp;<a href="#1stBYMAT">1st BYMAT Conference</a></h4></div>
+      <div class="year"><h4>2018</h4></div><div class="title"><h4>&emsp;<a href="#1stBYMAT">1st BYMAT Conference</a><span style="float:right;"><a href="pdf/1stBYMAT_slides.pdf">Slides</a></span></h4></div>
        <div class="pretalktitle"></div><div class="talktitle">Computing the homology of closed semialgebraic sets</div>
       </div>
 
