--- a/cv.html
+++ b/cv.html
@@ -451,6 +451,11 @@
   <div class="pretalktitle"></div><div class="talktitle">Average minus Weak Complexity equals Adaptive algorithms</div>
 </div>
 
+<br><div class="cv">
+<div class="year"><h4></h4></div><div class="title"><h4>&emsp;<a href="#ISSAC2019">44th International Symposium on Symbolic and Algebraic Computations (ISSAC 2019)</a><span style="float:right;"><a href="pdf/ISSAC19_slides.pdf">Slides</a></span></h4></div>
+  <div class="pretalktitle"></div><div class="talktitle">Plantinga-Vegter algorithm takes average polynomial time</div>
+</div>
+
    <br><div class="cv">
    <div class="year"><h4></h4></div><div class="title"><h4>&emsp;<a href="#SIAMAG2019Symposium">Minisymposium <em>Numerical methods for structured polynomial system solving</em></a></h4></div><div class="year"></div><div class="title"><h4>at <a href="#SIAMAG2019">SIAM Conference on Applied Algebraic Geometry 2019</a><span style="float:right;"><a href="pdf/SIAMAG19_slides.pdf">Slides</a></span></h4></div>
      <div class="pretalktitle"></div><div class="talktitle">Farewell to Weyl: Condition-based analysis with a Banach norm in numerical algebraic geometry</div>
